# device

./: .gitignore  README  TODO
etc/: cfw.cfg
src/comp/opencv-surf/: CMakeLists.txt  opencv_surf.cpp
src/comp/opencv-surf/lapack/.svn/: entries
src/comp/opencv-surf/lapack/.svn/text-base/: CMakeLists.txt.svn-base
src/comp/opencv-surf/lapack/inc/: cblas.h  clapack.h
src/comp/opencv-surf/lapack/inc/.svn/: entries
src/comp/opencv-surf/lapack/src/: CMakeLists.txt  daxpy.c  dbdsdc.c  dbdsqr.c  dcopy.c  dgebd2.c  dgebrd.c  dgelq2.c  dgelqf.c  dgels.c  dgelsd.c  dgemm.c  dgemv.c  dgeqr2.c  dgesdd.c  dgesv.c  dgetf2.c  dgetrf.c  dgetri.c  dgetrs.c  dlabrd.c  dlaebz.c  dlaed1.c  dlaed2.c  dlaed3.c  dlaed4.c  dlaed7.c  dlaed8.c  dlaed9.c  dlaeda.c  dlaev2.c  dlagts.c  dlaisnan.c  dlals0.c  dlalsa.c  dlalsd.c  dlamch.c  dlamrg.c  dlanst.c  dlapy2.c  (+171 more)
src/comp/opencv-surf/lapack/src/.svn/: entries
src/comp/opencv-surf/surf/.svn/: entries
src/comp/opencv-surf/surf/.svn/text-base/: CMakeLists.txt.svn-base
src/comp/opencv-surf/surf/inc/: cv.h  cv.hpp  cvaux.h  cvaux.hpp  cvinternal.h  cvtypes.h  cvvidsurv.hpp  cvwimage.h  cxcore.h  cxcore.hpp  cxerror.h  cxflann.h  cxmat.hpp  cxmisc.h  cxoperations.hpp  highgui.h  highgui.hpp  ml.h
src/comp/opencv-surf/surf/inc/.svn/: entries
src/comp/opencv-surf/surf/src/: CMakeLists.txt  _cvfeaturetree.h  _cvkdtree.hpp  _cvmodelest.h  cvimgwarp.cpp  cvsmooth.cpp  cvsurf.cpp  cxarithm.cpp  cxarray.cpp  cxconvert.cpp  cxdatastructs.cpp  cxlapack.cpp  cxmathfuncs.cpp  cxmatmul.cpp  cxmatrix.cpp  cxsystem.cpp  cxtables.cpp
(+291 files in other folders)
